fix: rtlcss for onboarding [run `grunt rtlcss`] fix: dropdowns overlapping fix: no results on mobile closes #1768

--- a/dashboard/src/scss/components/onboarding/_editor-selector.scss
+++ b/dashboard/src/scss/components/onboarding/_editor-selector.scss
@@ -2,7 +2,6 @@
   overflow: visible;
   display: inline-block;
   position: relative;
-  z-index: 10000000;
   width: 100%;
   button {
 	display: flex;
