--- a/dashboard/src/scss/components/onboarding/_general.scss
+++ b/dashboard/src/scss/components/onboarding/_general.scss
@@ -77,9 +77,12 @@
   }
 
   .tags {
-	margin-top: 20px;
+	margin-top: 10px;
+	justify-content: center;
+	display: flex;
+	flex-wrap: wrap;
 	.tag {
-	  margin: 0 20px;
+	  margin: 10px 20px;
 	  line-height: normal;
 	  height: auto;
 	  font-weight: 600;
