--- a/dashboard/src/scss/components/onboarding/_search.scss
+++ b/dashboard/src/scss/components/onboarding/_search.scss
@@ -19,7 +19,6 @@
 	overflow: visible;
 	position: relative;
 	width: 100%;
-	z-index: 10000;
 	height: 52px;
 	display: block;
 
